--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
     <head>
 
-        <title></title>
-    </head>
-    <body>
+        <title>
 
+        </title>
+</head>
+
+    <body>
+    <style>
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;        
+    }
+    </style>
+        <a href="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+        <img alt="Google"
+        src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        width="150px" hieght="150px">
+        </a>
+
+        <form action="/form/submit" methood="GET">
+            <input type="text" name="text" class="search" placeholder="Search here!">
+            <input type="submit" name="submit" class="submit" value="Search">
+        </form>
+        
+    <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+    </ul>
+        
     </body>
+
+    <footer>
+
+    </footer>
+
     </html>
