--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         width="150px" hieght="150px">
         </a>
 
-        <form action="/form/submit" methood="GET">
-            <input type="text" name="text" class="search" placeholder="Search here!">
-            <input type="submit" name="submit" class="submit" value="Search">
+        <form id="search">
+            <input type="search" id="searchbox">
+                <input type="button" class="button" value="Google Search">
+                <input type="button" class="button" value="I'm Feeling Lucky">
         </form>
         
     <ul>
